[gd_scene load_steps=27 format=3 uid="uid://c0jd3cujvbmlc"]

[ext_resource type="Script" uid="uid://rrxtl6hrf7dr" path="res://Assets/Objects/Player/Script_Player.gd" id="1_5ffuh"]
[ext_resource type="PackedScene" uid="uid://1hxrf7rm1jbt" path="res://Assets/Objects/Player/SC_Camera.tscn" id="1_xqu0b"]
[ext_resource type="PackedScene" uid="uid://cch1gmlni7xgu" path="res://Assets/Composition/ComponentHitbox.tscn" id="2_er805"]
[ext_resource type="PackedScene" uid="uid://blpvuc0ibnp7q" path="res://Assets/Objects/Player/Viewmodels/SC_Control_ViewModel.tscn" id="3_5jqs6"]
[ext_resource type="Texture2D" uid="uid://bq04hxdqqem1b" path="res://Assets/Images/Debug/arrow.png" id="3_qcniq"]
[ext_resource type="PackedScene" uid="uid://b2pmo5llggqsa" path="res://Assets/Composition/ComponentHealth.tscn" id="3_vwhjx"]
[ext_resource type="Script" uid="uid://b71a0vln8bc56" path="res://Assets/Objects/Player/Weapon/Script_Control_PlayerWeapon.gd" id="4_7lj4b"]
[ext_resource type="PackedScene" uid="uid://dn3xfbukde1fv" path="res://Assets/Objects/Player/Viewmodels/SC_Viewmodel_None.tscn" id="4_hkojv"]
[ext_resource type="Script" uid="uid://ulhbmgirm102" path="res://Assets/Objects/Player/Script_Camera.gd" id="5_vwhjx"]
[ext_resource type="PackedScene" uid="uid://04d8wgl8ry6b" path="res://Assets/Objects/Player/Viewmodels/SC_Viewmodel_Fists.tscn" id="6_hbj6a"]
[ext_resource type="Shader" uid="uid://30jupcwsbqm1" path="res://Assets/Objects/Player/shader_dash_fx.tres" id="10_7iqpk"]
[ext_resource type="Script" uid="uid://dhveyx1fvmyvb" path="res://Assets/Objects/Player/Script_DashFX.gd" id="11_jc3lu"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_c23eb"]
margin = 0.01
radius = 0.4
height = 1.75

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_vm6pp"]
margin = 0.01
radius = 0.4
height = 0.95

[sub_resource type="BoxShape3D" id="BoxShape3D_7iqpk"]
size = Vector3(1, 1.77298, 0.821655)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_vwhjx"]

[sub_resource type="BoxShape3D" id="BoxShape3D_xd2rw"]
size = Vector3(1.4, 0.75, 1.5)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_jc3lu"]
lifetime_randomness = 0.24
emission_shape = 6
emission_ring_axis = Vector3(0, 0, 1)
emission_ring_height = 0.49
emission_ring_radius = 1.16
emission_ring_inner_radius = 0.0
emission_ring_cone_angle = 60.0
angle_min = 1.07288e-05
angle_max = 1.07288e-05
direction = Vector3(0, 0, 1)
spread = 0.0
initial_velocity_min = 0.1
initial_velocity_max = 3.0
gravity = Vector3(0, 0, 0)
attractor_interaction_enabled = false
scale_min = 0.4

[sub_resource type="Gradient" id="Gradient_ahrm2"]
offsets = PackedFloat32Array(0, 0.548694, 1)
colors = PackedColorArray(0, 0, 0, 1, 0.497474, 0.497474, 0.497474, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_xn4hj"]
gradient = SubResource("Gradient_ahrm2")
width = 32
height = 256
fill_to = Vector2(0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cjdk2"]
render_priority = 0
shader = ExtResource("10_7iqpk")
shader_parameter/gradient_tex = SubResource("GradientTexture2D_xn4hj")

[sub_resource type="PlaneMesh" id="PlaneMesh_ojp02"]
material = SubResource("ShaderMaterial_cjdk2")
size = Vector2(0.02, 2)

[sub_resource type="Curve" id="Curve_jc3lu"]
_limits = [0.0, 0.8, 0.0, 20.0]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 1, Vector2(9, 0), 0.0, 0.4, 1, 1, Vector2(11, 0.8), 0.4, 0.0, 1, 0]
point_count = 3

[sub_resource type="CapsuleMesh" id="CapsuleMesh_qsvxe"]
radius = 0.4
height = 1.75

[sub_resource type="CylinderShape3D" id="CylinderShape3D_3xvwb"]
height = 0.025
radius = 0.4

[sub_resource type="BoxShape3D" id="BoxShape3D_er805"]
size = Vector3(0.8, 1.23477, 0.619775)

[node name="Player" type="CharacterBody3D" groups=["player"]]
collision_layer = 2
collision_mask = 5
floor_stop_on_slope = false
floor_max_angle = 1.15192
script = ExtResource("1_5ffuh")

[node name="Collision" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_c23eb")

[node name="CollisionCrouch" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.4, 0)
shape = SubResource("CapsuleShape3D_vm6pp")
disabled = true

[node name="ComponentHitbox" parent="." node_paths=PackedStringArray("health") instance=ExtResource("2_er805")]
health = NodePath("../ComponentHealth")

[node name="CollisionShape3D" type="CollisionShape3D" parent="ComponentHitbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.00532532, -0.0022583)
shape = SubResource("BoxShape3D_7iqpk")

[node name="ComponentHealth" parent="." instance=ExtResource("3_vwhjx")]
max_health = 100.0
invis_seconds = 1.0

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 0)

[node name="Camera" parent="Head" groups=["camera"] instance=ExtResource("1_xqu0b")]
current = true
script = ExtResource("5_vwhjx")
noise = SubResource("FastNoiseLite_vwhjx")

[node name="WeaponAttach" type="Node3D" parent="Head/Camera"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0163806, -0.0672958, -0.908494)

[node name="ViewmodelControl" parent="Head/Camera/WeaponAttach" instance=ExtResource("3_5jqs6")]

[node name="Weapon" parent="Head/Camera/WeaponAttach/ViewmodelControl" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.072, -0.073, 0.843124)

[node name="VIEWMODEL_None" parent="Head/Camera/WeaponAttach/ViewmodelControl/Weapon" index="0" instance=ExtResource("4_hkojv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0163806, 0.532704, 0.0915061)

[node name="WeaponControl" type="Node" parent="Head/Camera/WeaponAttach/ViewmodelControl"]
script = ExtResource("4_7lj4b")

[node name="ChangeWeaponTimer" type="Timer" parent="Head/Camera/WeaponAttach/ViewmodelControl/WeaponControl"]
wait_time = 0.1
one_shot = true

[node name="VIEWMODEL_Fists" parent="Head/Camera/WeaponAttach/ViewmodelControl" instance=ExtResource("6_hbj6a")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.05, -0.05, 0.885)

[node name="MuzzlePoint" type="Node3D" parent="Head/Camera/WeaponAttach"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0163806, 0.0672958, -0.770245)

[node name="Raycast" type="RayCast3D" parent="Head/Camera"]
target_position = Vector3(0, 0, -50)
collision_mask = 5
collide_with_areas = true
debug_shape_custom_color = Color(1, 0, 0, 1)
debug_shape_thickness = 1

[node name="FistsArea" type="Area3D" parent="Head/Camera"]
collision_layer = 2
collision_mask = 5
monitoring = false
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Head/Camera/FistsArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.75)
shape = SubResource("BoxShape3D_xd2rw")
debug_color = Color(0.996951, 0, 0.176392, 0.42)

[node name="DashingFX" type="Node3D" parent="Head/Camera"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.136111)

[node name="GPUParticles3D" type="GPUParticles3D" parent="Head/Camera/DashingFX"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.486835)
amount = 32
amount_ratio = 0.8
lifetime = 0.5
explosiveness = 0.23
process_material = SubResource("ParticleProcessMaterial_jc3lu")
draw_pass_1 = SubResource("PlaneMesh_ojp02")
script = ExtResource("11_jc3lu")
alpha_curve = SubResource("Curve_jc3lu")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("CapsuleMesh_qsvxe")

[node name="ArrowVelocityPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.811715, 0)
visible = false

[node name="ArrowVelocity" type="Sprite3D" parent="ArrowVelocityPivot"]
transform = Transform3D(1.91069e-15, 4.37114e-08, -1, 1, -4.37114e-08, 0, -4.37114e-08, -1, -4.37114e-08, 0.000862435, -0.00394773, -0.0805144)
modulate = Color(1, 0, 0.95, 1)
axis = 0
texture_filter = 0
texture = ExtResource("3_qcniq")

[node name="CeilingDetection" type="ShapeCast3D" parent="."]
visible = false
shape = SubResource("CylinderShape3D_3xvwb")
target_position = Vector3(0, 0.867, 0)

[node name="Vault" type="Node3D" parent="."]

[node name="VaultCheck" type="Area3D" parent="Vault"]
input_ray_pickable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Vault/VaultCheck"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.241287, -0.312046)
shape = SubResource("BoxShape3D_er805")

[node name="VaultRaycast" type="RayCast3D" parent="Vault"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.000681251, 0)
target_position = Vector3(0, 0, -0.6)
hit_back_faces = false

[node name="VaultRaycastTop" type="RayCast3D" parent="Vault"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.847391, 0)
target_position = Vector3(0, 0, -1)
hit_back_faces = false

[node name="Step" type="Node3D" parent="."]
visible = false

[node name="StepBelowRaycast" type="RayCast3D" parent="Step"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.886562, 0)
target_position = Vector3(0, -0.3, 0)

[node name="StepAheadRaycast" type="RayCast3D" parent="Step"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, -0.57106)
target_position = Vector3(0, -0.3, 0)
debug_shape_custom_color = Color(0.933333, 0, 1, 1)
debug_shape_thickness = 4

[connection signal="area_entered" from="ComponentHitbox" to="." method="_on_component_hitbox_area_entered"]
[connection signal="area_exited" from="ComponentHitbox" to="." method="_on_component_hitbox_area_exited"]
[connection signal="timeout" from="Head/Camera/WeaponAttach/ViewmodelControl/WeaponControl/ChangeWeaponTimer" to="Head/Camera/WeaponAttach/ViewmodelControl/WeaponControl" method="_on_change_weapon_timer_timeout"]
[connection signal="body_entered" from="Vault/VaultCheck" to="." method="_on_vault_check_body_entered"]
[connection signal="body_exited" from="Vault/VaultCheck" to="." method="_on_vault_check_body_exited"]

[editable path="Head/Camera/WeaponAttach/ViewmodelControl"]
